--- a/package.json
+++ b/package.json
@@ -1,46 +1,36 @@
 {
-  "name": "donate-freecodecamp",
-  "description": "donate page for freeCodeCamp.org",
+  "name": "gatsby-starter-default",
+  "description": "Gatsby default starter",
   "version": "1.0.0",
-  "author": "freeCodeCamp",
-  "scripts": {
-    "dev": "NODE_ENV=development node server & bankai build client/app.js public/ -w -d -V",
-    "build": "NODE_ENV=production bankai build client/app.js public/",
-    "pm2-start": "NODE_ENV=production pm2 start server --name donate-api -i max",
-    "format-js": "prettier es5 --single-quote --write './**/*.js'",
-    "lint": "eslint --ext .js --ignore-path .gitignore . --fix",
-    "format": "npm run format-js && npm run lint"
-  },
-  "keywords": [],
-  "license": "BSD-3-Clause",
-  "main": "N/A",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "choo": "^6.6.0",
-    "choo-log": "^6.1.2",
-    "dat-colors": "^3.5.1",
-    "dotenv": "^4.0.0",
-    "express": "^4.15.3",
-    "load-script2": "^1.0.0",
-    "pm2": "^2.8.0",
-    "sheetify": "^6.1.1",
-    "stripe": "^4.23.1",
-    "tachyons": "^4.7.4",
+    "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "gatsby": "^1.9.127",
+    "gatsby-link": "^1.6.30",
+    "gatsby-plugin-react-helmet": "^1.0.8",
+    "js-yaml": "^3.10.0",
+    "react-ga": "^2.3.5",
+    "stripe": "^5.4.0",
     "xhr": "^2.4.0"
   },
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "MIT",
+  "main": "n/a",
+  "scripts": {
+    "build": "gatsby build",
+    "dev": "gatsby develop -p 8080",
+    "dev-server": "nodemon server",
+    "format": "prettier --no-semi --write \"src/**/*.js\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "devDependencies": {
-    "babel-eslint": "^8.0.3",
-    "bankai": "^8.1.1",
-    "eslint": "^4.12.1",
-    "prettier": "^1.9.1",
-    "standard": "*"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/joehand/donate-css.git"
-  },
-  "bugs": {
-    "url": "https://github.com/joehand/donate-css/issues"
-  },
-  "homepage": "https://github.com/joehand/donate-css"
+    "eslint": "^4.13.1",
+    "eslint-plugin-react": "^7.5.1",
+    "nodemon": "^1.12.7",
+    "prettier": "^1.8.2"
+  }
 }
