--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-link": "^1.6.30",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "js-yaml": "^3.10.0",
+    "pm2": "^2.10.1",
     "react-ga": "^2.3.5",
     "stripe": "^5.4.0",
     "xhr": "^2.4.0"
@@ -25,6 +26,9 @@
     "dev": "gatsby develop -p 8080",
     "dev-server": "nodemon server",
     "format": "prettier --single-quote es5 --write \"src/**/*.js\"",
+    "pm2-monit": "pm2 monit",
+    "pm2-stop": "pm2 stop donate-api",
+    "start": "NODE_ENV=production pm2 start server --name donate-api -i max",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
